--- a/Cerradura/Cerradura/Base.lproj/Main.storyboard
+++ b/Cerradura/Cerradura/Base.lproj/Main.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A282b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A282b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Mie-zY-Cnu">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Locks-->
@@ -17,22 +18,12 @@
                         <animations/>
                     </navigationBar>
                     <connections>
-                        <segue destination="nhM-z1-ExH" kind="relationship" relationship="rootViewController" id="7je-5d-KP0"/>
+                        <segue destination="sEr-Pj-7gW" kind="relationship" relationship="rootViewController" id="wTB-wg-VUD"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AO0-OC-Y0w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1304" y="-532"/>
-        </scene>
-        <!--Permission-->
-        <scene sceneID="WPY-Yu-BhY">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Permission" id="nhM-z1-ExH" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="NSs-gd-lB9"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="92l-Mt-mey" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1939.5" y="-532"/>
         </scene>
         <!--Settings-->
         <scene sceneID="nC1-BW-LUC">
@@ -239,20 +230,29 @@
                 <splitViewController id="Mie-zY-Cnu" sceneMemberID="viewController">
                     <connections>
                         <segue destination="vuf-Dr-0ST" kind="relationship" relationship="masterViewController" id="ZSj-K5-YQs"/>
-                        <segue destination="dze-hL-EUO" kind="relationship" relationship="detailViewController" id="0jp-NT-SSe"/>
+                        <segue destination="Tp0-Cg-so2" kind="relationship" relationship="detailViewController" id="4Gv-NT-yJi"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YYw-fl-2wf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-235" y="-532"/>
         </scene>
-        <!--EmptySelection-->
-        <scene sceneID="9YG-RA-hp5">
+        <!--Navigation Controller-->
+        <scene sceneID="yR9-P2-JSq">
             <objects>
-                <viewControllerPlaceholder storyboardName="EmptySelection" id="dze-hL-EUO" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="biw-PX-QiE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="Tp0-Cg-so2" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Icl-7y-sSn">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Kf0-9w-XOJ" kind="relationship" relationship="rootViewController" id="dlp-n2-e3j"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LGU-Rs-bfS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-234.5" y="-72"/>
+            <point key="canvasLocation" x="-235" y="208"/>
         </scene>
         <!--Activity-->
         <scene sceneID="ZMk-9e-1Jn">
@@ -293,6 +293,159 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J1o-U9-BPe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="547" y="-532"/>
+        </scene>
+        <!--Locks-->
+        <scene sceneID="8yc-yY-tS3">
+            <objects>
+                <tableViewController storyboardIdentifier="Permissions" useStoryboardIdentifierAsRestorationIdentifier="YES" id="sEr-Pj-7gW" customClass="PermissionsViewController" customModule="Cerradura" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="66" sectionHeaderHeight="22" sectionFooterHeight="22" id="5dF-j4-eVZ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <inset key="separatorInset" minX="67" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PermissionCell" rowHeight="68" id="2w6-3V-B5w" customClass="PermissionCell" customModule="Cerradura" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="86" width="600" height="68"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2w6-3V-B5w" id="3A9-gA-RFM">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="67"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anytime" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="59e-pS-0np">
+                                            <rect key="frame" x="67" y="39" width="525" height="17"/>
+                                            <animations/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gXx-Rf-dhi" customClass="StyleKitView" customModule="Cerradura" customModuleProvider="target">
+                                            <rect key="frame" x="8" y="8" width="51" height="51"/>
+                                            <subviews>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="mg1-tB-EiZ">
+                                                    <rect key="frame" x="15" y="16" width="20" height="20"/>
+                                                    <animations/>
+                                                </activityIndicatorView>
+                                            </subviews>
+                                            <animations/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="gXx-Rf-dhi" secondAttribute="height" multiplier="1:1" id="bMT-e1-Z13"/>
+                                                <constraint firstAttribute="centerY" secondItem="mg1-tB-EiZ" secondAttribute="centerY" id="elq-7b-Va2"/>
+                                                <constraint firstAttribute="centerX" secondItem="mg1-tB-EiZ" secondAttribute="centerX" id="xOh-o9-TFV"/>
+                                            </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="string" keyPath="canvasName" value="PermissionBadgeAnytime"/>
+                                            </userDefinedRuntimeAttributes>
+                                        </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Front Door" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Na3-bB-Ybf">
+                                            <rect key="frame" x="67" y="8" width="525" height="23"/>
+                                            <animations/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <animations/>
+                                    <constraints>
+                                        <constraint firstItem="Na3-bB-Ybf" firstAttribute="leading" secondItem="59e-pS-0np" secondAttribute="leading" id="1bv-Nc-5If"/>
+                                        <constraint firstItem="Na3-bB-Ybf" firstAttribute="trailing" secondItem="59e-pS-0np" secondAttribute="trailing" id="77n-Ei-GL9"/>
+                                        <constraint firstItem="gXx-Rf-dhi" firstAttribute="top" secondItem="3A9-gA-RFM" secondAttribute="topMargin" id="9H5-UI-yxS"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Na3-bB-Ybf" secondAttribute="trailing" id="Yac-E9-Xta"/>
+                                        <constraint firstItem="Na3-bB-Ybf" firstAttribute="leading" secondItem="gXx-Rf-dhi" secondAttribute="trailing" constant="8" id="eFh-lh-ohp"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="59e-pS-0np" secondAttribute="trailing" id="eau-Ys-37v"/>
+                                        <constraint firstItem="59e-pS-0np" firstAttribute="leading" secondItem="gXx-Rf-dhi" secondAttribute="trailing" constant="20" id="fmH-7W-coo"/>
+                                        <constraint firstItem="Na3-bB-Ybf" firstAttribute="top" secondItem="3A9-gA-RFM" secondAttribute="topMargin" id="isy-6e-iY1"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="gXx-Rf-dhi" secondAttribute="bottom" id="lqg-Hk-ceU"/>
+                                        <constraint firstItem="gXx-Rf-dhi" firstAttribute="leading" secondItem="3A9-gA-RFM" secondAttribute="leading" constant="8" id="sOV-ws-NUO"/>
+                                        <constraint firstItem="59e-pS-0np" firstAttribute="top" secondItem="Na3-bB-Ybf" secondAttribute="bottom" constant="8" id="tbb-DL-J68"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="eau-Ys-37v"/>
+                                            <exclude reference="fmH-7W-coo"/>
+                                        </mask>
+                                    </variation>
+                                </tableViewCellContentView>
+                                <animations/>
+                                <inset key="separatorInset" minX="67" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <connections>
+                                    <outlet property="activityIndicatorView" destination="mg1-tB-EiZ" id="pay-2G-oR6"/>
+                                    <outlet property="permissionImageView" destination="gXx-Rf-dhi" id="2OK-ew-27p"/>
+                                    <outlet property="permissionLockNameLabel" destination="Na3-bB-Ybf" id="cK4-v6-FNZ"/>
+                                    <outlet property="permissionTypeLabel" destination="59e-pS-0np" id="g6K-Cd-dbK"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="sEr-Pj-7gW" id="hTW-Rv-9Tp"/>
+                            <outlet property="delegate" destination="sEr-Pj-7gW" id="SzT-wx-Epr"/>
+                        </connections>
+                    </tableView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Locks" id="WoL-j9-zKP">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="cBp-JQ-g8q"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="kXs-nl-kje">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                        <connections>
+                            <action selector="refresh:" destination="sEr-Pj-7gW" eventType="valueChanged" id="qB4-uP-umb"/>
+                        </connections>
+                    </refreshControl>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mq6-eq-blr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2131" y="-532"/>
+        </scene>
+        <!--Empty Selection-->
+        <scene sceneID="fEM-rb-2c1">
+            <objects>
+                <viewController storyboardIdentifier="EmptySelection" title="Empty Selection" id="Kf0-9w-XOJ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="QMw-GI-8gg"/>
+                        <viewControllerLayoutGuide type="bottom" id="p6f-Cn-NJc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="erQ-IR-Bji">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" semanticContentAttribute="spatial" translatesAutoresizingMaskIntoConstraints="NO" id="iuV-YF-2zl" customClass="StyleKitView" customModule="Cerradura" customModuleProvider="target">
+                                <rect key="frame" x="180" y="180" width="240" height="240"/>
+                                <animations/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="iuV-YF-2zl" secondAttribute="height" multiplier="1:1" id="Cgg-0a-7Tp"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="canvasName" value="PunkuDoorLogo"/>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="iuV-YF-2zl" secondAttribute="height" multiplier="100:40" id="9Pa-D4-FFp"/>
+                            <constraint firstAttribute="centerY" secondItem="iuV-YF-2zl" secondAttribute="centerY" constant="95" id="HPC-aa-rCA"/>
+                            <constraint firstAttribute="centerY" secondItem="iuV-YF-2zl" secondAttribute="centerY" id="ZJw-Ms-RaR"/>
+                            <constraint firstAttribute="centerX" secondItem="iuV-YF-2zl" secondAttribute="centerX" id="lJc-W5-Xeg"/>
+                            <constraint firstAttribute="centerX" secondItem="iuV-YF-2zl" secondAttribute="centerX" constant="60.5" id="qnO-fd-nco"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="HPC-aa-rCA"/>
+                                <exclude reference="qnO-fd-nco"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" id="pMc-LC-r4s"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="spA-Yh-Jtj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-235" y="982"/>
         </scene>
     </scenes>
     <resources>
